; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/codecs/extr_jz4740.c_jz4740_codec_dev_probe.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/codecs/extr_jz4740.c_jz4740_codec_dev_probe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_soc_component = type { i32 }
%struct.jz4740_codec = type { i32 }

@JZ4740_REG_CODEC_1 = common dso_local global i32 0, align 4
@JZ4740_CODEC_1_SW2_ENABLE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_soc_component*)* @jz4740_codec_dev_probe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @jz4740_codec_dev_probe(%struct.snd_soc_component* %0) #0 {
  %2 = alloca %struct.snd_soc_component*, align 8
  %3 = alloca %struct.jz4740_codec*, align 8
  store %struct.snd_soc_component* %0, %struct.snd_soc_component** %2, align 8
  %4 = load %struct.snd_soc_component*, %struct.snd_soc_component** %2, align 8
  %5 = call %struct.jz4740_codec* @snd_soc_component_get_drvdata(%struct.snd_soc_component* %4)
  store %struct.jz4740_codec* %5, %struct.jz4740_codec** %3, align 8
  %6 = load %struct.jz4740_codec*, %struct.jz4740_codec** %3, align 8
  %7 = getelementptr inbounds %struct.jz4740_codec, %struct.jz4740_codec* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load i32, i32* @JZ4740_REG_CODEC_1, align 4
  %10 = load i32, i32* @JZ4740_CODEC_1_SW2_ENABLE, align 4
  %11 = load i32, i32* @JZ4740_CODEC_1_SW2_ENABLE, align 4
  %12 = call i32 @regmap_update_bits(i32 %8, i32 %9, i32 %10, i32 %11)
  ret i32 0
}

declare dso_local %struct.jz4740_codec* @snd_soc_component_get_drvdata(%struct.snd_soc_component*) #1

declare dso_local i32 @regmap_update_bits(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
